# app_flyte_wf1

./: .gitignore  AUTOMATIC_PROJECT_CREATION_FLOW.md  CleanCreditScoring.csv  DEPLOYMENT_ARCHITECTURE.md  Dockerfile  Dockerfile.custom  FLYTE_ARCHITECTURE_GUIDE.md  FLYTE_AWS_INFRASTRUCTURE_DESIGN.md  FLYTE_MULTI_TENANT_GUIDE.md  FLYTE_SAGEMAKER_INTEGRATION.md  ML_WORKFLOW_DEPLOYMENT_GUIDE.md  OAUTH_STORY_DOCUMENTATION.md  README.md  REORGANIZATION_SUMMARY.md  WORKSPACE_FLYTE_INTEGRATION.md  batch_prediction_pipeline.py  complete_oauth_demo.py  config.py  docker-build.sh  execution_config.yaml  execution_config_v2.yaml  flyte-config-backup.yaml  ml_pipeline,py  ml_pipeline_improved.py  project.yaml  pyflyte.config  pyproject.toml  requirements.txt
config/: README.md  execution_config_v3.yaml  flyte-auth-config.yaml  s3-access-policy-updated.json  s3-access-policy.json
containers/: Dockerfile  Dockerfile.multistage
docs/: CORPORATE_OAUTH_TROUBLESHOOTING.md  FLYTECTL_DEEP_DIVE.md  ML_WORKFLOW_DEPLOYMENT_GUIDE.md  README.md  S3_IAM_SETUP.md  SECURITY_REVIEW.md
docs/architecture/: LAYERED_ARCHITECTURE_DIAGRAM.md
docs/guides/: RBAC_LOCAL_VS_ENTERPRISE.md
examples/: CDAO_SDK_Demo.ipynb
multi_file_example/workflows/: ml_workflows.py
oauth-learning/: OAUTH_STORY_DOCUMENTATION.md  README.md  oauth_test.py
sm/: README.md
sm/config/: sagemaker-integration-config.md
sm/docs/: FLYTE_TASK_PARAMETERS.md  FLYTE_VS_KUBEFLOW.md  (+3 more)
utils/: README.md  execution_resources_aj84ckgrqc52cs82zq4q.txt  live_execution_monitor.py  resource_summary.py  resource_summary.txt
(+7 files in other folders)
