[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "ml-workflows"
version = "0.1.0"
description = "Machine Learning workflows for Flyte"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "flytekit==1.10.3",
    "pandas==2.2.2",
    "scikit-learn==1.4.2",
    "numpy==1.26.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ml_pipeline_improved", "config"]
